--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,8 @@
           {% if my_page.navigation_title %}
             {% if my_page.button %}
                 <a class="page-link button button-primary" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.navigation_title }}</a>
+            {% elsif my_page.external %}
+                <a class="page-link" href="{{ my_page.external_url }}">{{ my_page.navigation_title }}</a>
             {% else %}
                 <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.navigation_title }}</a>
             {% endif %}
