Add static sharing buttons

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
 {% include main.scss %}
 {% endcapture %}
 {{ include_to_scssify | scssify }}
+{% include sharing-buttons.css %}
   </style>
 
   <link rel="icon" type="img/ico" href="/images/favicon.ico">
