--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,6 +41,7 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
+    {% include sharing-buttons.html %}
   </div>
   {% if page.attribution.name %}
   <small>
