--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,18 @@
+{% capture page_title %}{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}{% endcapture %}
+{% capture page_description %}{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | strip_newlines }}{% endif %}{% endcapture %}
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | strip_newlines }}{% endif %}">
+  {% if page.layout == "post" %}
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@DrMajorMcCheese" />
+  <meta name="twitter:title" content="{{ page_title }}" />
+  <meta name="twitter:description" content="{{ page_description }}" />
+  <meta name="twitter:image" content="{{page.cover | replace_first: '/images', '/images/thumbnails' | prepend: site.baseurl | prepend: site.url}}" />
+  {% endif %}
+  <title>{{ page_title }}</title>
+  <meta name="description" content="{{ page_description }}">
 
   <style type="text/css">
 {% capture include_to_scssify %}
