Increase blazy offset.

--- a/_includes/blazy.html
+++ b/_includes/blazy.html
@@ -2,6 +2,8 @@
   <script>
         ;(function() {
             // Initialize
-            var bLazy = new Blazy();
+            var bLazy = new Blazy({
+                offset: 400
+            });
         })();
   </script>
